// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Initializing a form should add default data, state and isValid 1`] = `
Object {
  "foo": Object {
    "data": Object {},
    "state": Object {
      "_initial": Object {},
    },
  },
}
`;

exports[`Initializing a form should set an initial state 1`] = `
Object {
  "foo": Object {
    "data": Object {},
    "state": Object {
      "_initial": Object {
        "did_check": true,
      },
      "did_check": true,
    },
  },
}
`;

exports[`Initializing a form should set initial data 1`] = `
Object {
  "foo": Object {
    "data": Object {
      "bar": Object {
        "_initial": Object {
          "isRequired": false,
          "value": true,
        },
        "isRequired": false,
        "value": true,
      },
      "baz": Object {
        "_initial": Object {
          "isEnabled": false,
        },
        "isEnabled": false,
      },
    },
    "state": Object {
      "_initial": Object {},
    },
  },
}
`;
